GITHUB : bump to version 3.4.11.1-ansell-SNAPSHOT
add to .gitignore

add slf4j-api dependency

add metainf-services dependency

add sesame dependencies

add commons-io test dependency to contract

avoid depending on junit and mockito in pom.xml by using dependencyManagement