@@ -13,14 +13,13 @@
 		<version>7</version>
 	</parent>
 
-
-	<groupId>net.sourceforge.owlapi</groupId>
+	<groupId>com.github.ansell.owlapi</groupId>
 	<artifactId>owlapi-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>3.4.11-SNAPSHOT</version>
+	<version>3.4.11.1-ansell-SNAPSHOT</version>
 	<name>OWLAPI</name>
 	<description>The OWL API is a Java API and reference implementation for creating, manipulating and serialising OWL Ontologies. The latest version of the API is focused towards OWL 2</description>
-	<url>http://owlapi.sourceforge.net/</url>
+	<url>https://github.com/ansell/owlapi</url>
 
 	<modules>
 		<module>api</module>
@@ -54,21 +53,107 @@
 		</license>
 	</licenses>
 
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.11</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.9.5</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.github.ansell.abstract-service-loader</groupId>
+				<artifactId>abstract-service-loader</artifactId>
+				<version>0.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-model</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-api</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-repository-api</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-ntriples</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-turtle</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-n3</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-trig</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-trix</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-rdfjson</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-rdfxml</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openrdf.sesame</groupId>
+				<artifactId>sesame-rio-binary</artifactId>
+				<version>${sesame.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<!-- Sets up the META-INF/services/ files automatically at compile time. optional so it is not a transitive dependency -->
+			<dependency>
+				<groupId>org.kohsuke.metainf-services</groupId>
+				<artifactId>metainf-services</artifactId>
+				<version>1.5</version>
+				<scope>compile</scope>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.4</version>
+				<scope>test</scope>
+			</dependency>   
+		</dependencies>
+	</dependencyManagement>
 
 	<developers>
 		<developer>
@@ -76,7 +161,16 @@
 			<name>Ignazio Palmisano</name>
 			<email>ignazio1977@users.sourceforge.net</email>
 		</developer>
+		<developer>
+			<id>ansell</id>
+			<name>Peter Ansell</name>
+			<email>p_ansell@yahoo.com</email>
+		</developer>
 	</developers>
+
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
 
 	<mailingLists>
 		<mailingList>
@@ -91,8 +185,8 @@
 
 
 	<organization>
-		<name>The University of Manchester</name>
-		<url>http://www.cs.manchester.ac.uk/</url>
+		<name>CSIRO HRPPC</name>
+		<url>http://www.plantphenomics.org/hrppc</url>
 	</organization>
 
 	<profiles>
@@ -124,93 +218,135 @@
 							</execution>
 						</executions>
 					</plugin>
-					<plugin>
-						<groupId>org.apache.felix</groupId>
-						<artifactId>maven-bundle-plugin</artifactId>
-						<version>2.3.7</version>
-						<extensions>true</extensions>
-						<configuration>
-							<instructions>
-								<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-								<Bundle-Name>${project.artifactId}</Bundle-Name>
-								<Export-Package>{local-packages}</Export-Package>
-							</instructions>
-						</configuration>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
 
 	<build>
-		<plugins>
-			<!-- In the Compiler Plugin we specify the encoding and the compiler version. -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
+		<pluginManagement>
+			<plugins>
+	
+				<!-- In the Compiler Plugin we specify the encoding and the compiler version. -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+	
+				<!-- We need to configure the Source Plugin for deploying the sources. -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.2.1</version>
+					<executions>
+						<!-- Attach sources. -->
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+	
+				<!-- We need to configure the Javadoc Plugin for deploying the Javadocs -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+	
+				<!-- The Assembly Plugin allows providing an additional single-jar build. -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<descriptors>
+							<!-- <descriptor>owlapi-bin.xml</descriptor> -->
+							<descriptor>distribution/src/assembly/bin.xml</descriptor>
+						</descriptors>
+					</configuration>
+				</plugin>
+	
+				<!-- The Surefire Plugin is for error reporting. -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.16</version>
+					<configuration>
+						<forkCount>2</forkCount>
+						<reuseForks>true</reuseForks>
+						<argLine>-Xmx1024M -XX:MaxPermSize=512M</argLine>
+					</configuration>
+				</plugin>
+	
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>2.5</version>
+				</plugin>
 
-			<!-- We need to configure the Source Plugin for deploying the sources. -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
 
-			<!-- We need to configure the Javadoc Plugin for deploying the Javadocs -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- The Surefire Plugin is for error reporting. -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.16</version>
-				<configuration>
-					<!-- useFile>false</useFile>
-					<printSummary>false</printSummary> -->
-					<argLine>-Xmx1024M</argLine>
-				</configuration>
-			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.6</version>
+				</plugin>
 
-		</plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.1</version>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<!-- Specify the encoding of the source files. -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sesame.version>2.7.10</sesame.version>
+		<slf4j.version>1.7.5</slf4j.version>
 	</properties>
 
 	<!-- Parameters for the Source Code Management system. -->
 	<scm>
-		<connection>scm:git:git://github.com/owlcs/owlapi.git</connection>
-		<developerConnection>scm:git:git@github.com:owlcs/owlapi.git</developerConnection>
-		<url>https://github.com/owlcs/owlapi</url>
+		<connection>scm:git:git://github.com/ansell/owlapi.git</connection>
+		<developerConnection>scm:git:git@github.com:ansell/owlapi.git</developerConnection>
+		<url>https://github.com/ansell/owlapi</url>
 	</scm>
 
 </project>
